--- a/SomeCats/MainWindow.xaml
+++ b/SomeCats/MainWindow.xaml
@@ -4,9 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
-        xmlns:local="clr-namespace:SomeCats"
         mc:Ignorable="d"
-        Title="Fluffy Cats" Height="450" Width="800" Loaded="Window_Loaded">
+        Title="Fluffy Cats" Height="450" Width="800" Loaded="Window_Loaded" Unloaded="Window_OnUnloaded">
     <Grid>
         <Image x:Name="imagemControle"
                gif:ImageBehavior.RepeatBehavior="2x"
